--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ build.sh
 .coveralls.yml
 .node-version
 .nyc_output
-yarn.lock
 resolved.yaml
 
 # Logs
@@ -34,3 +33,14 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# vscode IDE
+.vscode/
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
