--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.11.0",
   "description": "An OpenAPI v3.0 development workflow assistant",
   "homepage": "https://speccy.io/",
-  "bin": {
-    "speccy": "./speccy.js"
-  },
+  "packageManager": "yarn@3.2.2",
+  "bin": "./speccy.js",
   "scripts": {
     "test": "jest --coverage"
   },
@@ -31,27 +30,27 @@
     "linter"
   ],
   "dependencies": {
-    "commander": "^2.18.0",
-    "ejs": "^2.5.2",
-    "express": "^4.14.0",
-    "json-schema-to-openapi-schema": "^0.3.0",
-    "nconf": "^0.10.0",
+    "commander": "^11.0.0",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "json-schema-to-openapi-schema": "^0.4.0",
+    "nconf": "^0.12.0",
     "nconf-yaml": "^1.0.2",
-    "node-fetch": "^2.3.0",
-    "node-readfiles": "^0.2.0",
-    "oas-linter": "^3.0.0",
-    "oas-resolver": "^2.2.4",
-    "oas-validator": "^3.0.1",
-    "redoc": "v2.0.0-rc.12",
-    "yaml": "^1.5.0"
+    "node-fetch": "^3.3.1",
+    "node-readfiles": "^0.3.1",
+    "oas-linter": "^3.2.2",
+    "oas-resolver": "^2.5.6",
+    "oas-validator": "^5.0.8",
+    "redoc": "^2.0.0",
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^8.0.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "coveralls": "^3.0.0",
-    "jest": "^24.1.0",
-    "mock-stdin": "^0.3.1",
-    "nock": "^10.0.0"
+    "coveralls": "^3.1.1",
+    "jest": "^29.5.0",
+    "mock-stdin": "^1.0.0",
+    "nock": "^13.3.1"
   }
 }
