--- a/package.json
+++ b/package.json
@@ -30,10 +30,8 @@
     "linter"
   ],
   "dependencies": {
+    "@openapi-contrib/json-schema-to-openapi-schema": "^2.2.5",
     "commander": "^11.0.0",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "json-schema-to-openapi-schema": "^0.4.0",
     "nconf": "^0.12.0",
     "nconf-yaml": "^1.0.2",
     "node-fetch": "^3.3.1",
@@ -41,7 +39,6 @@
     "oas-linter": "^3.2.2",
     "oas-resolver": "^2.5.6",
     "oas-validator": "^5.0.8",
-    "redoc": "^2.0.0",
     "yaml": "^2.3.1"
   },
   "devDependencies": {
