--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "packageManager": "yarn@3.2.2",
   "bin": "./speccy.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "prettier": "prettier --config .prettierrc.js --write \"**/*.{js,jsx}\"",
+    "lint": "./node_modules/.bin/eslint test --ext .jsx --ext .js --ext --.json"
   },
   "preferGlobal": true,
   "repository": {
@@ -46,8 +48,10 @@
     "babel-loader": "^9.1.2",
     "babel-preset-es2015": "^6.24.1",
     "coveralls": "^3.1.1",
+    "eslint": "^8.43.0",
     "jest": "^29.5.0",
     "mock-stdin": "^1.0.0",
-    "nock": "^13.3.1"
+    "nock": "^13.3.1",
+    "prettier": "^2.8.8"
   }
 }
